[tool.poetry]
name = "engula"
version = "0.1.0"
authors = ["The Engula Authors"]
license = "Apache-2.0"
description = "The Python client for Engula"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
